<resources>
    <string name="app_name">SAppTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Skip</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_cta_label">Start</string>

    <string name="error_mgs">Error Message Template</string>
    <string name="label_make_fragment">Select Make</string>
    <string name="label_year">Select Year</string>
    <string name="error_no_trims">No Trims found, please continue</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="trim">Trim</string>
    <string name="year">Year</string>
    <string name="estimated_price">Estimated Price</string>

    <string name="default_value">All</string>

</resources>